# Lovdata

./: .gitignore  LICENSE  README.md  download_and_unzip.sh  pyproject.toml
.devcontainer/: devcontainer.json
.github/: copilot-instructions.md
docs/plans/: 001-gratis-datasett-mcp-testing.md
src/lovdata_mcp/: __init__.py  __main__.py  client.py  server.py
testdata/lovdata/: SELECTION.md
testdata/lovdata/laws/: nl-2023-12-20-107.xml  nl-2025-04-25-12.xml  nl-2026-03-06-7.xml
tests/: __init__.py  test_server.py
