[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "lovdata-mcp"
version = "0.1.0"
description = "MCP server for the Lovdata API – Norwegian legal database"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
dependencies = [
    "mcp[cli]>=1.0.0",
    "httpx>=0.27.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-httpx>=0.32.0",
]

[project.scripts]
lovdata-mcp = "lovdata_mcp.server:main"

[tool.hatch.build.targets.wheel]
packages = ["src/lovdata_mcp"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff.lint]
select = ["E", "F", "I"]
